[package]
name = "cert-helper"
version = "0.3.1"
edition = "2024"
authors = ["Christer Johansson"]
build = false
autobins = false
autoexamples = false
autobenches = false
description = "Helper library for creating certificates using openssl"
readme = "README.md"
keywords = ["x509", "Certificates"]
categories = ["cryptography"]
license = "MIT"

documentation = "https://docs.rs/cert-helper"
homepage = "https://github.com/chrjoh/cert-helper"
repository = "https://github.com/chrjoh/cert-helper"


[lib]
name = "cert_helper"
path = "src/lib.rs"

[[example]]
name = "create_certificates_and_write_to_file"
path = "examples/create_certificates_and_write_to_file.rs"

[dependencies]
chrono = "0.4.41"
openssl = { version = "0.10.73" }
x509-parser = "0.17.0"

[dev-dependencies]
tempfile = "3"
