[package]
name = "cert-helper"
version = "0.3.7"
edition = "2024"
authors = ["Christer Johansson"]
build = false
autobins = false
autoexamples = false
autobenches = false
description = "A helper library for managing certificates using OpenSSL, including support for generating CSRs and CRLs."
readme = "README.md"
keywords = ["x509", "Certificates", "CRL"]
categories = ["cryptography"]
license = "MIT"

documentation = "https://docs.rs/cert-helper"
homepage = "https://github.com/chrjoh/cert-helper"
repository = "https://github.com/chrjoh/cert-helper"


[lib]
name = "cert_helper"
path = "src/lib.rs"

[[example]]
name = "create_certificates_and_write_to_file"
path = "examples/create_certificates_and_write_to_file.rs"

[[example]]
name = "crl_example"
path = "examples/crl_example.rs"

[dependencies]
bit-vec = "0.8.0"
chrono = "0.4.41"
num-bigint = "0.4.6"
openssl = { version = "0.10.73" }
openssl-sys = "0.9.109"
x509-parser = "0.17.0"
yasna = "0.5.2"

[dev-dependencies]
tempfile = "3"
