[package]
name = "cert-helper"
version = "0.4.2"
edition = "2024"
authors = ["Christer Johansson"]
autobins = false
autoexamples = false
autobenches = false
description = "A helper library for managing certificates using OpenSSL, including support for generating CSRs and CRLs."
readme = "README.md"
keywords = ["x509", "Certificates", "CRL"]
categories = ["cryptography"]
license = "MIT"

documentation = "https://docs.rs/cert-helper"
homepage = "https://github.com/chrjoh/cert-helper"
repository = "https://github.com/chrjoh/cert-helper"


[lib]
name = "cert_helper"
path = "src/lib.rs"

[[example]]
name = "create_certificates_and_write_to_file"
path = "examples/create_certificates_and_write_to_file.rs"

[[example]]
name = "crl_example"
path = "examples/crl_example.rs"

[[example]]
name = "verify_pqc_cli"
path = "examples/verify_pqc_cli.rs"
required-features = ["pqc"]

[[example]]
name = "pqc_all_variants"
path = "examples/pqc_all_variants.rs"
required-features = ["pqc"]

[[example]]
name = "pqc_crl_example"
path = "examples/pqc_crl_example.rs"
required-features = ["pqc"]

[features]
# Experimental: post-quantum signature algorithms (ML-DSA, SLH-DSA) via direct
# openssl-sys FFI. Requires OpenSSL >= 3.5 at build and runtime. See
# docs/quantum-safe-ciphers.md and spec/features/01-pqc-keys/plan.md.
pqc = []

[dependencies]
bit-vec = "0.8.0"
chrono = "0.4.41"
num-bigint = "0.4.6"
openssl = { version = "0.10.73" }
openssl-sys = "0.9.109"
x509-parser = "0.17.0"
yasna = "0.5.2"
foreign-types = "0.3"
[dev-dependencies]
tempfile = "3"
